<resources>
    <string name="app_name">ChatFiturrrr</string>
    <string name="welcome_back_to_pawmedic">Welcome Back To PawMedic</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="Email">Email</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="create_new_account">Create New Account</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_inn">Sign In</string>
    <string name="select_doctor">Select Doctor</string>
</resources>