<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="24dp"
    android:scrollbars="none"
    tools:context=".activity.SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/welcome_back_to_pawmedic"
            android:textColor="@color/primary_text"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/login_to_continue"
            android:textColor="@color/secondary_text"
            android:textSize="12sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/background_input"
            android:hint="@string/name"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/primary_text"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_input"
            android:hint= "@string/email"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/primary_text"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_input"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/primary_text"
            android:textSize="13sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:textStyle="bold"
            app:cornerRadius="8dp" />

        <TextView
            android:id="@+id/tvCreateNewAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/create_new_account"
            android:textColor="@color/primary"
            android:textSize="13sp"
            android:textStyle="bold" />

    </LinearLayout>


</ScrollView>