<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="24dp"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/create_new_account"
            android:textColor="@color/primary_text"
            android:textSize="18sp"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">


        </FrameLayout>
        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_input"
            android:hint="@string/name"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/primary_text"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_input"
            android:hint="@string/Email"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/primary_text"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_input"
            android:hint="@string/password"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/primary_text"
            android:textSize="13sp" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_button_sign"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:textStyle="bold"
            app:cornerRadius="8dp"/>

        <TextView
            android:id="@+id/textSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/sign_inn"
            android:textColor="@color/primary"
            android:textSize="13sp"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>